# python-pmi

./: .pre-commit-config.yaml  pmi.py  pyproject.toml  readme.md
.github/workflows/: ci.yml
tests/: test_pmi.py
